--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "staudenmeir/laravel-merged-relations": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^2.0",
